@@ -11,7 +11,6 @@ DESIGN
 
 HIGHEST
 - Basics: make beaker wider
-- Basics: labels on right, drain on left
 - new colors for pH probe and display (get from YY)
 - ComboBox: add background color behind arrow button (sun#43)
 
